--- a/backend/v0_2/src/engines/descriptions.css
+++ b/backend/v0_2/src/engines/descriptions.css
@@ -1,7 +1,3 @@
-p, h3 {
-    margin: 20px 500 0 20px;
-}
-
 /* body {
     background-color: #ffce06;
 } */
@@ -9,6 +5,15 @@ p, h3 {
 body {
     color: white;
     background-color: #183748;
+}
+
+
+p, h3 {
+    margin: 3% 30% 0% 3%;
+}
+
+p {
+    text-align: justify;
 }
 
 
